--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Gradient Background</title>
 </head>
 <body id="gradient">
-    <h1>COOL Generator</h1>
+    <h1>Background Generator</h1>
     <input class="color1" type="color" name="color1" value="#00ff00">
     <input class="color2" type="color" name="color2" value="#ff0000">
-    <h2>This is the background Background</h2>
+    <h2>This is the background</h2>
     <h3></h3>
     <script src="script.js"></script>
 </body>
